--- a/index.html
+++ b/index.html
@@ -122,12 +122,15 @@
     <footer class="page-footer">
       <section class="follow">
         <div class="main-follow">
-          <h2 class="follow__text">подпишитесь на рассылку</h2>
-          <p class="follow__desscription">Только полезная информация и никакого спама, честное слово!</p>
+          <div class="follow_text">
+            <h2 class="follow__text_title">подпишитесь на рассылку</h2>
+            <p class="follow__desscription">Только полезная информация и никакого спама, честное слово!</p>
+          </div>
           <form action="https://echo.htmlacademy.ru" class="mailing-form" method="get">
             <input class="mailing-form-line" type="email" name="email" placeholder="Ваш e-mail" required>
             <button class="mailing-form-button" type="submit">Подписаться</button>
           </form>
+
         </div>
       </section>
       <section class="social">
