:heavy_check_mark: Сборка #12

--- a/12/index.html
+++ b/12/index.html
@@ -125,7 +125,7 @@
         <div class="main-follow">
           <div class="follow_text">
             <h2 class="follow__text_title">подпишитесь на рассылку</h2>
-            <p class="follow__desscription">Только полезная информация и никакого спама, честное слово!</p>
+            <p class="follow__desscription">Только полезная информация и никакого спама, честное бойскаутское!</p>
           </div>
           <form action="https://echo.htmlacademy.ru" class="mailing-form" method="get">
             <input class="mailing-form-line" type="email" name="email" placeholder="Ваш e-mail" required>
