:heavy_check_mark: Сборка #14

--- a/14/catalog.html
+++ b/14/catalog.html
@@ -256,7 +256,7 @@
         <div class="pagination">
           <ul class="pagination-list">
             <li class="pagination-list_item pagination-active">
-              <span>1</span>
+              <a href="#">1</a>
             </li>
             <li class="pagination-list_item">
               <a href="#">2</a>
