--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
             </a>
           </li>
           <li class="navigation-icons__items">
-            <a class="navigation-icons__link" href="#">
+            <a class="navigation-icons__link navigation_icons_heart" href="#">
               <span class="visually-hidden">Избранное</span>
+              <span class="favorite_number">12</span>
             </a>
           </li>
           <li class="navigation-icons__items">
