--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link type="Image/x-icon" href="images/favicon.png" rel="icon">
   </head>
 
   <body>
@@ -161,7 +162,7 @@
             </a>
           </li>
           <li class="social__item">
-            <a href="https://www.youtube.com/user/htmlacademy" class="social_link social__link__yt">
+            <a href="https://www.youtube.com/user/htmlacademyru" class="social_link social__link__yt">
               <svg class="social__icon" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
                 width="23" height="18" viewBox="0 0 23 18" fill="currentColor">
                 <path fill="#83B3D3"
@@ -185,6 +186,79 @@
         </a>
       </section>
     </footer>
+
+    <div class="modal-container modal-container-close">
+      <div class="modal modal-auth">
+        <button class="modal-close-button">
+          <span class="visually-hidden">Закрыть</span>
+        </button>
+        <section class="modal-content">
+          <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+          <form class="auth-form" action="https://echo.htmlacademy.ru/" method="post">
+            <p class="field-group">
+              <label class="enjoy-text" for="enjoy-date">Дата заезда:</label>
+              <input class="input-date" type="text" name="enjoy" id="enjoy-date" value="27 апреля 2020">
+              <span class="modal-error">Мы не можем отправить вас в прошлое.</span>
+            </p>
+            <p class="field-group">
+              <label class="enjoy-text" for="leave-date">Дата выезда:</label>
+              <input class="input-date" type="text" name="enjoy" id="leave-date" value="1 сентября 2021">
+              <span class="modal-description">На эти даты есть свободные номера. Пока есть.</span>
+            </p>
+            <div class="modal-quantity">
+              <p class="modal-ages">
+                <label class="ages-title adult-title" for="adult">Взрослые:</label>
+                <button class="less quantity-button">
+                  <svg class="tooltip-icon-less" xmlns="http://www.w3.org/2000/svg" width="14" height="2" fill="none"
+                    viewBox="0 0 14 2">
+                    <path fill="#756157" fill-opacity=".3" d="M0 0v2h14V0H0Z" border="none" />
+                  </svg>
+                </button>
+                <input class="number adult-number" type="number" name="adult-number" id="adult" value="2">
+                <button class="more quantity-button">
+                  <svg class="tooltip-icon-more" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none"
+                    viewBox="0 0 14 14">
+                    <path fill="#756157" fill-opacity=".3" d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                  </svg>
+                </button>
+              </p>
+              <p class="modal-child">
+                <span class="tooltip-group">
+                  <label class="ages-title yang-title" for="child">Дети:</label>
+                  <span class="tooltip">
+                    <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date">
+                      <svg class="tooltip-icon" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none"
+                        viewBox="0 0 26 26">
+                        <circle cx="13" cy="13" r="13" fill="#83B3D3" />
+                        <path fill="#fff" fill-rule="evenodd" d="M12 7h2v2h-2V7Zm2 12h-2v-9h2v9Z" clip-rule="evenodd" />
+                      </svg>
+                    </button>
+                    <span class="tooltip-text" role="tooltip" id="tooltip-label-date">Укажите количество детей,
+                      которые будут с вами, возраст
+                      которых от 6 до
+                      18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                  </span>
+                </span>
+                <button class="less quantity-button">
+                  <svg class="tooltip-icon-less" xmlns="http://www.w3.org/2000/svg" width="14" height="2" fill="none"
+                    viewBox="0 0 14 2">
+                    <path fill="#756157" fill-opacity=".3" d="M0 0v2h14V0H0Z" />
+                  </svg>
+                </button>
+                <input class="number yang-number" type="number" name="child-number" id="child" value="2">
+                <button class="more quantity-button">
+                  <svg class="tooltip-icon-more" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none"
+                    viewBox="0 0 14 14">
+                    <path fill="#756157" fill-opacity=".3" d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                  </svg>
+                </button>
+              </p>
+            </div>
+            <button class="modal-button" type="submit">Найти</button>
+          </form>
+        </section>
+      </div>
+    </div>
   </body>
 
 </html>
