--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <header class="main-header">
+    <header data-test="header" class="main-header">
       <nav class="navigation">
         <a class="navigation-icon" href="index.html">
           <img class="navigation-icon-logo" src="images/header-icons/logo.svg" alt="Иконка логотипа седоны" width="140"
@@ -44,15 +44,15 @@
         </ul>
       </nav>
     </header>
-    <main class="main-container main-index">
+    <main data-test="main" class="main-container main-index">
       <div class="main-container-index">
-        <section class="main-index-welcome">
+        <section data-test="hero" class="main-index-welcome">
           <img class="main-index-welcome-image" src="images/welcome.svg" alt="добро пожаловать в седону" width="458"
             height="352">
         </section>
 
         <!--Преимущества-->
-        <section class="advantages">
+        <section data-test="advantages" class="advantages">
           <div class="advantages_head">
             <h1 class="advantages__text">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
             <p class="advantages__description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -92,7 +92,7 @@
           </ul>
         </section>
 
-        <section class="service">
+        <section data-test="service" class="service">
           <div class="service_welcome">
             <h2 class="service_text">Приезжайте в седону отдохнуть в комфорте и уюте!</h2>
             <p class="service_description">Опытный персонал и качественное обслуживание!</p>
@@ -115,18 +115,18 @@
               <p class="service_item__description">Не только китайского, <br> но и настоящего местного производства!</p>
             </li>
           </ul>
-        </section>
-        <section class="interest">
-          <h2 class="interest_text">заинтересовались?</h2>
-          <p class="interest_description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения
-            гостиниц в Седоне</p>
-          <a href="catalog.html" class="interest_link"> Поиск гостиницы в седоне </a>
-        </section>
+          <section class="interest">
+            <h2 class="interest_text">заинтересовались?</h2>
+            <p class="interest_description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения
+              гостиниц в Седоне</p>
+            <a href="catalog.html" class="interest_link"> Поиск гостиницы в седоне </a>
+          </section>
       </div>
-    </main>
+      </section>
 
-    <footer class="page-footer">
-      <section class="follow">
+
+
+      <section data-test="subscribe" class="follow">
         <div class="main-follow">
           <div class="follow_text">
             <h2 class="follow__text_title">подпишитесь на рассылку</h2>
@@ -136,9 +136,11 @@
             <input class="mailing-form-line" type="email" name="email" placeholder="Ваш e-mail" required>
             <button class="mailing-form-button" type="submit">Подписаться</button>
           </form>
-
+        </div>
         </div>
       </section>
+    </main>
+    <footer data-test="footer" class="page-footer">
       <section class="social">
         <ul class="social__list">
           <li class="social__item ">
@@ -182,84 +184,12 @@
             <path fill="#000"
               d="M0 13.3v2.6h2.5v-2.6H0ZM11.6 4.9c-1.6 0-2.8.7-3.6 1.7h-.1V.4h-2v15.5h2v-5.3C7.9 8.5 9.2 7 11.2 7c1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.8c.1-3-1.8-5-4.5-5ZM26.6 5.2h-4.8V1.5h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V7.2h4.8v-2ZM41.1 5c-1.6 0-2.9.8-3.5 2h-.1a3.7 3.7 0 0 0-3.4-2c-1.4 0-2.5.8-3.1 1.8h-.1V5.2H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V9.3c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13c0 1.8 1 2.8 2.8 2.8h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.4h-2V13ZM28.9 20a4.9 4.9 0 0 0-3.9-1.7c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-2h.1v1.7h2V18.6h-2V20Zm-3.6 7.5a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.4c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3 3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6 1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20a4.9 4.9 0 0 0-3.9-1.7c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-2h.1v1.7h2V18.6h-2V20Zm-3.6 7.5a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.2a5 5 0 0 0-3.9-2c-3.1 0-5.4 2.4-5.4 5.7 0 3.3 2.2 5.6 5.4 5.6 1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.8h-2v6.4Zm-3.6 7.3a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.3a5.4 5.4 0 0 0-5.5 5.6c0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-3h8.8c.2-3.5-2-6.2-5.5-6.2Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5a3.2 3.2 0 0 1 3.2-2.6ZM98.2 18.3a4 4 0 0 0-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.4l-3.6-9h-2.2l4.8 11.7c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
           </svg>
-          </svg>
           <span class="visually-hidden">HTML Academy</span>
         </a>
       </section>
     </footer>
 
-    <div class="modal-container modal-container-close">
-      <div class="modal modal-auth">
-        <button class="modal-close-button" type="button">
-          <span class="visually-hidden">Закрыть</span>
-        </button>
-        <section class="modal-content">
-          <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
-          <form class="auth-form" action="https://echo.htmlacademy.ru/" method="post">
-            <p class="field-group">
-              <label class="enjoy-text" for="enjoy-date">Дата Заезда:</label>
-              <input class="input-date" type="text" name="enjoy" id="enjoy-date" value="27 апреля 2020">
-              <span class="modal-error">Мы не можем отправить вас в прошлое.</span>
-            </p>
-            <p class="field-group field-group-end">
-              <label class="enjoy-text" for="leave-date">Дата Выезда:</label>
-              <input class="input-date" type="text" name="enjoy" id="leave-date" value="1 сентября 2023">
-              <span class="modal-description">На эти даты есть свободные номера. Пока есть.</span>
-            </p>
-            <div class="modal-quantity">
-              <p class="modal-ages">
-                <label class="ages-title adult-title" for="adult">Взрослые:</label>
-                <button class="less quantity-button" type="button">
-                  <svg class="tooltip-icon-less" xmlns="http://www.w3.org/2000/svg" width="14" height="2" fill="none"
-                    viewBox="0 0 14 2">
-                    <path fill="#756157" fill-opacity=".3" d="M0 0v2h14V0H0Z" border="none" />
-                  </svg>
-                </button>
-                <input class="number adult-number" type="number" name="adult-number" id="adult" value="2">
-                <button class="more quantity-button" type="button">
-                  <svg class="tooltip-icon-more" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none"
-                    viewBox="0 0 14 14">
-                    <path fill="#756157" fill-opacity=".3" d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
-                  </svg>
-                </button>
-              </p>
-              <p class="modal-child">
-                <span class="tooltip-group">
-                  <label class="ages-title yang-title" for="child">Дети:</label>
-                  <span class="tooltip">
-                    <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date">
-                      <svg class="tooltip-icon" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none"
-                        viewBox="0 0 26 26">
-                        <circle cx="13" cy="13" r="13" fill="#83B3D3" />
-                        <path fill="#fff" fill-rule="evenodd" d="M12 7h2v2h-2V7Zm2 12h-2v-9h2v9Z" clip-rule="evenodd" />
-                      </svg>
-                    </button>
-                    <span class="tooltip-text" role="tooltip" id="tooltip-label-date">Укажите количество детей,
-                      которые будут с вами, возраст
-                      которых от 6 до
-                      18 лет. Дети до 6 лет размещаются бесплатно.</span>
-                  </span>
-                </span>
-                <button class="less quantity-button" type="button">
-                  <svg class="tooltip-icon-less" xmlns="http://www.w3.org/2000/svg" width="14" height="2" fill="none"
-                    viewBox="0 0 14 2">
-                    <path fill="#756157" fill-opacity=".3" d="M0 0v2h14V0H0Z" />
-                  </svg>
-                </button>
-                <input class="number yang-number" type="number" name="child-number" id="child" value="2">
-                <button class="more quantity-button">
-                  <svg class="tooltip-icon-more" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none"
-                    viewBox="0 0 14 14">
-                    <path fill="#756157" fill-opacity=".3" d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
-                  </svg>
-                </button>
-              </p>
-            </div>
-            <button class="modal-button" type="submit">Найти</button>
-          </form>
-        </section>
-      </div>
-    </div>
+
   </body>
 
 </html>
